feat: v0.4.5 updates
