# generated/apidocs.swagger.json
@@ -3,7 +3,7 @@
   "info": {
     "title": "Permify API",
     "description": "Permify is an open-source authorization service for creating and maintaining fine-grained authorizations across your individual applications and services. Permify converts authorization data as relational tuples into a database you point at. We called that database a Write Database (WriteDB) and it behaves as a centralized data source for your authorization system. You can model of your authorization with Permify's DSL - Permify Schema - and perform access checks with a single API call anywhere on your stack. Access decisions made according to stored relational tuples.",
-    "version": "v0.4.4",
+    "version": "v0.4.5",
     "contact": {
       "name": "API Support",
       "url": "https://github.com/Permify/permify/issues",
@@ -182,6 +182,12 @@
                 },
                 "subject": {
                   "$ref": "#/definitions/v1Subject"
+                },
+                "contextual_tuples": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/definitions/v1Tuple"
+                  }
                 }
               },
               "title": "PermissionCheckRequest"
@@ -233,6 +239,12 @@
                 },
                 "permission": {
                   "type": "string"
+                },
+                "contextual_tuples": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/definitions/v1Tuple"
+                  }
                 }
               },
               "title": "PermissionExpandRequest"
@@ -286,6 +298,12 @@
                 },
                 "subject": {
                   "$ref": "#/definitions/v1Subject"
+                },
+                "contextual_tuples": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/definitions/v1Tuple"
+                  }
                 }
               },
               "title": "PermissionLookupEntityRequest"
@@ -348,6 +366,12 @@
                 },
                 "subject": {
                   "$ref": "#/definitions/v1Subject"
+                },
+                "contextual_tuples": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/definitions/v1Tuple"
+                  }
                 }
               },
               "title": "PermissionLookupEntityRequest"
@@ -402,6 +426,12 @@
                 },
                 "subject_reference": {
                   "$ref": "#/definitions/v1RelationReference"
+                },
+                "contextual_tuples": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/definitions/v1Tuple"
+                  }
                 }
               },
               "title": "PermissionLookupSubjectRequest"
